[tool.poetry]
name = "django-includes"
version = "1.0.0"
description = ""
authors = ["Romain Dorgueil <romain@makersquad.fr>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = ">=3.6.0,<4"
cachecontrol = ">=0.12,<0.15"
django = ">=4.2,<5.1"
pyjwt = ">2,<3"
pytz = ">=2024"
requests = ">=2.31,<3"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
atomicwrites = "1.4.0"
attrs = "19.3.0"
coverage = "4.5.4"
isort = "4.3.21"
more-itertools = "8.3.0"
packaging = "20.4"
pluggy = "0.13.1"
py = "1.8.1"
pyparsing = "2.4.7"
pytest-cov = "2.8.1"
pytest = "4.6.10"
wcwidth = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
