[tool.poetry]
name = "django-includes"
version = "1.0.0"
description = ""
authors = ["Romain Dorgueil <romain@makersquad.fr>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<5.1"
pyjwt = ">2,<3"
pytz = ">=2024.1"
requests = ">=2.31,<3"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
